last update from me

--- a/homepage.html
+++ b/homepage.html
@@ -19,22 +19,17 @@
     <title>Home</title>
   </head>
   <body>
-    <div class="container mt-2">
+    <!-- MORING PAGE zi MOST DELAYED PART GOES ON -->
+
+    <div class="container-fluid mt-2">
       <div class="d-flex justify-content-between">
         <div class="buttonsforAll">
-          <button class="arrowButton bg-dark"><</button>
-          <button class="arrowButton bg-dark">></button>
+          <button class="arrowButton font-weight-bold"><</button>
+          <button class="arrowButton font-weight-bold">></button>
         </div>
         <div class="dropdown">
           <button
-            class="
-              btn
-              loginpage
-              bg-dark
-              text-light
-              dropdown-toggle
-              rounded-pill
-            "
+            class="btn font-weight-bold text-light dropdown-toggle rounded-pill"
             type="button"
             id="dropdownMenuButton"
             data-toggle="dropdown"
@@ -71,82 +66,56 @@
       </div>
       <!-- THE TITLE JON -->
       <h3 class="font-weight-bolder my-3">Good Morning</h3>
-    </div>
-    <!-- THIS IS WHERE CARDS BEGINS -->
 
-    <div class="container-fluid good-morning-container-fluid pt-5">
-      <div class="good-morning-main-container">
-        <div class="good-morning-card-container">
-          <img src="/mornin_imgs/img1.jpg" alt="" />
-          <span>Burning Jazz-rock Fusion</span>
-        </div>
-        <!-- EVERY CARD IS INSIDE THE SEPARATE COLS -->
-        <div class="good-morning-card-container img-fluid">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
-            alt=""
-          />
-          <span>Liked Songs</span>
-        </div>
+      <!-- THIS IS WHERE CARDS BEGINS -->
 
-        <div class="good-morning-card-container">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
-            alt=""
-          />
-          <span>Metal Ballads</span>
-        </div>
+      <div class="container-fluid good-morning-container-fluid pt-5">
+        <div class="good-morning-main-container">
+          <div class="good-morning-card-container">
+            <img src="/mornin_imgs/img1.jpg" alt="" />
+            <span>Burning Jazz-rock Fusion</span>
+          </div>
+          <!-- EVERY CARD IS INSIDE THE SEPARATE COLS -->
+          <div class="good-morning-card-container">
+            <img src="/mornin_imgs/liked_songs.jpg" alt="" />
+            <span>Liked Songs</span>
+          </div>
 
-        <div class="good-morning-card-container">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
-            alt=""
-          />
-          <span class="">POST HUMAN: SURVIVAL</span>
-        </div>
-        <div class="good-morning-card-container">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
-            alt=""
-          />
-          <span>This Is Joe Bonamassa</span>
-        </div>
-        <div class="good-morning-card-container">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
-            alt=""
-          />
-          <span>Midian</span>
-        </div>
-        <div class="good-morning-card-container">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
-            alt=""
-          />
-          <span>Nymphetamine</span>
-        </div>
+          <div class="good-morning-card-container">
+            <img src="/mornin_imgs/img2.jpg" alt="" />
+            <span>Metal Ballads</span>
+          </div>
 
-        <div class="good-morning-card-container">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
-            alt=""
-          />
-          <span>amo</span>
-        </div>
-        <!-- a -->
-        <div class="good-morning-card-container">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
-            alt=""
-          />
-          <span>LE BASK</span>
-        </div>
-        <div class="good-morning-card-container">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/en/6/6a/Desert_Rose_%28Sting_song%29_coverart.jpg"
-            alt=""
-          />
-          <span>Opeth</span>
+          <div class="good-morning-card-container">
+            <img src="/mornin_imgs/img6.jpg" alt="" />
+            <span class="">POST HUMAN: SURVIVAL</span>
+          </div>
+          <div class="good-morning-card-container">
+            <img src="/mornin_imgs/img7.jpg" alt="" />
+            <span>This Is Joe Bonamassa</span>
+          </div>
+          <div class="good-morning-card-container">
+            <img src="/mornin_imgs/img3.jpg" alt="" />
+            <span>Midian</span>
+          </div>
+          <div class="good-morning-card-container">
+            <img src="/mornin_imgs/img8.jpg" alt="" />
+            <span>Nymphetamine</span>
+          </div>
+
+          <div class="good-morning-card-container">
+            <img src="/mornin_imgs/amo.png" alt="" />
+            <span>amo</span>
+          </div>
+          <!-- a -->
+          <div class="good-morning-card-container">
+            <img src="/mornin_imgs/img5.jpg" alt="" />
+            <span>LE BASK</span>
+          </div>
+          <div class="good-morning-card-container">
+            <img src="/mornin_imgs/huge_avatar.jpeg" alt="" />
+            <span>Opeth</span>
+          </div>
         </div>
       </div>
     </div>
