make it responsive

--- a/homepage.html
+++ b/homepage.html
@@ -71,7 +71,7 @@
     <a href="#" class="see-all py-3">SEE ALL</a>
     <div class="row mx-n1 mb-4">
       <div class="col  px-1 w-100 img-fluid">
-        <div class="card ">
+        <div class="card h-100  ">
           <img class="images" src="images/img1.jpg" class="w-100 img-fluid rounded" alt="">
           <i class="bi bi-play-circle"></i>
           <div class="card-body">
@@ -80,7 +80,7 @@
           </div>
         </div>
       </div>
-      <div class="col  px-1 w-100 img-fluid">
+      <div class="col px-1 w-100 img-fluid">
         <div class="card h-100">
           <img class="images" src="images/img2.jpg" class="w-100 img-fluid rounded" alt="">
           <i class="bi bi-play-circle"></i>
@@ -129,7 +129,7 @@
           </div>
         </div>
       </div>
-      <!-- <div class="col  px-1 w-100 img-fluid">
+      <div class="col px-1 pt-3 d-sm-none w-100 img-fluid">
         <div class="card h-100">
           <img class="images" src="images/img7.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
@@ -139,7 +139,7 @@
           </div>
         </div>
       </div>
-      <div class="col  px-1 w-100 img-fluid">
+      <div class="col  px-1  pt-3 d-sm-none   w-100 img-fluid">
         <div class="card h-100">
           <img class="images" src="images/img8.jpg" class="w-100 img-fluid rounded" alt="">
           <div class="card-body">
@@ -148,7 +148,7 @@
             </p>
           </div>
         </div>
-      </div> -->
+      </div>
     </div>
   </div>
 
