fixed good morning section

--- a/homepage.html
+++ b/homepage.html
@@ -77,32 +77,128 @@
             <div>Burning Jazz-rock Fusion</div>
           </div>
           <div class="good-morning-card-container">
-            <img src="./images/img2.jpg" alt="">
-            <div>Burning Jazz-rock Fusion</div>
+            <img src="./images/liked songs.jpg" alt="">
+            <div>Liked songs</div>
           </div>
           <div class="good-morning-card-container">
             <img src="./images/img3.jpg" alt="">
-            <div>Burning Jazz-rock Fusion</div>
+            <div>Metal ballads</div>
           </div>
           <div class="good-morning-card-container">
             <img src="./images/img11.jpg" alt="">
-            <div>Burning Jazz-rock Fusion</div>
+            <div>POST HUMAN : SURVIVAL...</div>
           </div>
           <div class="good-morning-card-container">
             <img src="./images/img5.jpg" alt="">
-            <div>Burning Jazz-rock Fusion</div>
+            <div>This is Joe Bonamassa</div>
           </div>
           <div class="good-morning-card-container">
             <img src="./images/img6.jpg" alt="">
-            <div>Burning Jazz-rock Fusion</div>
+            <div>Midian</div>
           </div>
-
           <div class="good-morning-card-container">
             <img src="./images/img7.jpg" alt="">
-            <div>Burning Jazz-rock Fusion</div>
+            <div>Nymphetamine</div>
+          </div>
+          <div class="good-morning-card-container">
+            <img src="./images/img8.jpg" alt="">
+            <div>amo</div>
+          </div>
+          <div class="good-morning-card-container">
+            <img src="./images/img9.jpg" alt="">
+            <div>LE BASK</div>
+          </div>
+          <div class="good-morning-card-container">
+            <img src="./images/img10.jpg" alt="">
+            <div>Opeth</div>
           </div>
         </div>
 
+        <div class="container-fluid">
+          <h4 class=" py-3"><strong>Recently played</strong></h4>
+          <a href="#" class="see-all py-3">SEE ALL</a>
+          <div class="row mx-n1 mb-4">
+            <div class="col  px-1 w-100 img-fluid">
+              <div class="card ">
+                <img class="images" src="images/img1.jpg" class="w-100 img-fluid rounded" alt="">
+                <i class="bi bi-play-circle"></i>
+                <div class="card-body">
+                  <h5>Burning Jazz-rock</h5>
+                  <p class="card-text text-secondary pt-2"> You'll find fiery <br> modern, groovy, jazz-...</p>
+                </div>
+              </div>
+            </div>
+            <div class="col  px-1 w-100 img-fluid">
+              <div class="card h-100">
+                <img class="images" src="images/img2.jpg" class="w-100 img-fluid rounded" alt="">
+                <i class="bi bi-play-circle"></i>
+                <div class="card-body">
+                  <h5>Metal Ballads</h5>
+                  <p class="card-text text-secondary pt-4">A collection of the best <br> metal ballads.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col  px-1 w-100 img-fluid">
+              <div class="card h-100">
+                <img class="images" src="images/img3.jpg" class="w-100 img-fluid rounded" alt="">
+                <div class="card-body">
+                  <h5 class="pt-1">Midian</h5>
+                  <p class="card-text text-secondary pt-4">Cradle Of Filth
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col  px-1 w-100 img-fluid">
+              <div class="card h-100">
+                <img class="images" src="images/liked songs.jpg" class="w-100 img-fluid rounded" alt="">
+                <div class="body">
+                  <h5 class="pt-4 pl-2"> Liked Songs</h5>
+                </div>
+              </div>
+            </div>
+            <div class="col  px-1 w-100 img-fluid">
+              <div class="card h-100">
+                <img id="round-img" class="images" src="images/img5.jpg" class="w-100 img-fluid rounded" alt="">
+                <div class="card-body">
+                  <h5 class="pt-1">LE BASK</h5>
+                  <p class="card-text text-secondary pt-4">Artist
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col  px-1 w-100 img-fluid">
+              <div class="card h-100">
+                <img class="images" src="images/img6.jpg" class="w-100 img-fluid rounded" alt="">
+                <div class="card-body">
+                  <h5>POST HUMAN: S...</h5>
+                  <p class="card-text text-secondary">Bring Me The Horizon
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col  px-1 w-100 img-fluid">
+              <div class="card h-100">
+                <img class="images" src="images/img7.jpg" class="w-100 img-fluid rounded" alt="">
+                <div class="card-body">
+                  <h5>This is Joe Bonam</h5>
+                  <p class="card-text text-secondary">This is Joe Bonamassa..<br>
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col  px-1 w-100 img-fluid">
+              <div class="card h-100">
+                <img class="images" src="images/img8.jpg" class="w-100 img-fluid rounded" alt="">
+                <div class="card-body">
+                  <h5>Nymphetamine</h5>
+                  <p class="card-text text-secondary pt-4">Cradle Of Filth
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
 
 
         <div class="container-fluid">
@@ -168,7 +264,24 @@
                 </div>
               </div>
             </div>
-
+            <div class="col   px-1 w-100 img-fluid">
+              <div class="card h-100">
+                <img class="images" src="images/img15.jpg" class="w-100 img-fluid rounded" alt="">
+                <div class="card-body">
+                  <h5>Power Pizza</h5>
+                  <p class="card-text text-secondary pt-4">Nick Loro Sio </p>
+                </div>
+              </div>
+            </div>
+            <div class="col  px-1 w-100 img-fluid">
+              <div class="card h-100">
+                <img class="images" src="images/img16.jpg" class="w-100 img-fluid rounded" alt="">
+                <div class="card-body">
+                  <h5>Mitologia</h5>
+                  <p class="card-text text-secondary pt-4">Spotify Studios</p>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
 
