--- a/album.html
+++ b/album.html
@@ -68,11 +68,22 @@
     </div>
     <!-- end of marti's navbar -->
 
-    <div class="col-10">
+    <div class="col-10 p-0">
 
 
       <!-- JUMBOTRON START HERE -->
-
+      <div class="jumbotron jumbotron-fluid album-jumbotron-don pb-3">
+        <div class="container d-flex">
+          <img class="bohemian-album-cover ml-2" src="./images/bohemian-rhapsody-cover.png" alt="">
+          <div class="container">
+            <p class="p1"><span class="s1"><span class="Apple-converted-space"> </span></span></p>
+            <p>ALBUM</p>
+            <h1>Bohemian Rhapsody (The Original Soundtrack)</h1>
+            <p><img class="artist-profile-pic" src="./images/queen profil pic.jpeg" alt=""> Queen•2018•22 songs, 1hr
+              19min</p>
+          </div>
+        </div>
+      </div>
 
 
 
@@ -85,8 +96,8 @@
       <!-- BUTTONS START HERE -->
 
 
-      <div class="row">
-        <div class="col-3 mt-n1">
+      <div class="row ml-1 mb-4">
+        <div class="col-2 mt-n1">
           <div class="play-button-group d-flex">
             <div class="play-btn d-flex justify-content-center mr-5">
               <img class="play-triangle" src="./mp_assets/spotify play triangle.svg" alt="">
@@ -96,7 +107,7 @@
             </div>
           </div>
         </div>
-        <div class="col-9 ml-n5 mt-2">
+        <div class="col-10 ml-auto mt-2">
           <div class="secondary-button-group d-flex">
             <div class="like-album-heart mr-5">
               <ion-icon name="heart-outline"></ion-icon>
@@ -116,97 +127,87 @@
       <!-- BUTTONS END HERE -->
 
       <!--  TABLE STARTS HERE  -->
-      <div class="col-8">
-        <table class="table table-borderless table-transparent">
-          <thead>
-            <tr>
-              <th scope="col-1">#</th>
-              <th scope="col-8">TITLE</th>
-              <th scope="col-3"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                  class="bi bi-clock" viewBox="0 0 16 16">
-                  <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z" />
-                  <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z" />
-                </svg></th>
-
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="col-1">1</th>
-              <td scope="col-8">20th century fox fanfare <h6 class="smallh6">Queen</h6>
-              </td>
-
-              <td scope="col-3">0:25</td>
-              <td></td>
-
-            </tr>
-            <tr>
-              <th scope="col-1">2</th>
-              <td scope="col-8">Somebody to love <h6 class="smallh6">Queen</h6>
-              </td>
-              <td scope="col-3">4:55</td>
-              <td></td>
-
-            </tr>
-            <tr>
-              <th scope="col-1">3</th>
-              <td scope="col-8">Doing all right__revisited <h6 class="smallh6">Queen</h6>
-              </td>
-              <td scope="col-3">3:16</td>
-              <td></td>
-
-            </tr>
-            <tr>
-              <th scope="col-1">4</th>
-              <td scope="col-8">Keep your self alive-live at the rainbow <h6 class="smallh6">Queen</h6>
-              </td>
-              <td scope="col-3">3:56</td>
-              <td></td>
-
-            </tr>
-            <tr>
-              <th scope="col-1">5</th>
-              <td scope="col-8">Killer queen <h6 class="smallh6">Queen</h6>
-              </td>
-              <td scope="col-3">2:59</td>
-              <td></td>
-
-            </tr>
-            <tr>
-              <th scope="col-1">6</th>
-              <td scope="col-8">Fat bottom girls-live in paris <h6 class="smallh6">Queen</h6>
-              </td>
-              <td scope="col-3">4:37</td>
-              <td></td>
-
-            </tr>
-            <tr>
-              <th scope="col-1">7</th>
-              <td scope="col-8">Bohemian rhapsody <h6 class="smallh6">Queen</h6>
-              </td>
-              <td scope="col-3">5:54</td>
-              <td></td>
-
-            </tr>
-            <tr>
-              <th scope="col-1">8</th>
-              <td scope="col-8">Now i am here-live at the hammersmith odeon <h6 class="smallh6">Queen</h6>
-              </td>
-              <td scope="col-3">4:25</td>
-              <td></td>
-
-            </tr>
-            <tr>
-              <th scope="col-1">9</th>
-              <td scope="col-8">crazy little things called love <h6 class="smallh6">Queen</h6>
-              </td>
-              <td scope="col-3">2:43</td>
-              <td></td>
-
-            </tr>
-          </tbody>
-        </table>
-
+      <div class="row ml-3">
+        <div class="col-12">
+          <table class="table table-borderless table-transparent">
+            <thead>
+              <tr>
+                <th scope="col-1">#</th>
+                <th scope="col-8">TITLE</th>
+                <th scope="col-3"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-clock" viewBox="0 0 16 16">
+                    <path d="M8 3.5a.5.5 0 0 0-1 0V9a.5.5 0 0 0 .252.434l3.5 2a.5.5 0 0 0 .496-.868L8 8.71V3.5z" />
+                    <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm7-8A7 7 0 1 1 1 8a7 7 0 0 1 14 0z" />
+                  </svg></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="col-1">1</th>
+                <td scope="col-8">20th century fox fanfare <h6 class="smallh6">Queen</h6>
+                </td>
+                <td scope="col-3">0:25</td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="col-1">2</th>
+                <td scope="col-8">Somebody to love <h6 class="smallh6">Queen</h6>
+                </td>
+                <td scope="col-3">4:55</td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="col-1">3</th>
+                <td scope="col-8">Doing all right__revisited <h6 class="smallh6">Queen</h6>
+                </td>
+                <td scope="col-3">3:16</td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="col-1">4</th>
+                <td scope="col-8">Keep your self alive-live at the rainbow <h6 class="smallh6">Queen</h6>
+                </td>
+                <td scope="col-3">3:56</td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="col-1">5</th>
+                <td scope="col-8">Killer queen <h6 class="smallh6">Queen</h6>
+                </td>
+                <td scope="col-3">2:59</td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="col-1">6</th>
+                <td scope="col-8">Fat bottom girls-live in paris <h6 class="smallh6">Queen</h6>
+                </td>
+                <td scope="col-3">4:37</td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="col-1">7</th>
+                <td scope="col-8">Bohemian rhapsody <h6 class="smallh6">Queen</h6>
+                </td>
+                <td scope="col-3">5:54</td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="col-1">8</th>
+                <td scope="col-8">Now i am here-live at the hammersmith odeon <h6 class="smallh6">Queen</h6>
+                </td>
+                <td scope="col-3">4:25</td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="col-1">9</th>
+                <td scope="col-8">crazy little things called love <h6 class="smallh6">Queen</h6>
+                </td>
+                <td scope="col-3">2:43</td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
 
