tweaked the verified artist tag

--- a/artist.html
+++ b/artist.html
@@ -68,20 +68,25 @@
         </div>
       </div>
     </div>
+    <!-- end of marti's navbar -->
+
 
     <div class="col-10 px-0">
 
 
-      <!-- JUMBOTRON AND TABLE START HERE -->
+      <!-- JUMBOTRON STARTS HERE -->
 
       <div class="position-relative">
-        <i class=" jumbo-icon bi bi-patch-check-fill"><span class="span"> Verified Artist</span></i>
+        <div class="verified-artist-container">
+          <i class="jumbo-icon bi bi-patch-check-fill"></i>
+          <span class="verified-artist-text">Verified Artist</span>
+        </div>
         <img class="w-100 jumbo-img img-fluid " src="./images/jumbotron1.jpg" alt="">
         <h1 class="jumbo-title">Queen</h1>
         <p class="jumbo-parag">37,120,733 listeners</p>
       </div>
 
-      <!-- JUMBOTRON AND TABLE ENDS HERE  -->
+      <!-- JUMBOTRON ENDS HERE  -->
 
 
 
@@ -90,12 +95,13 @@
 
 
 
-      <!-- end of marti's navbar -->
+
 
       <div class="col-10">
-        <!-- JUMBOTRON STARTS HERE -->
-        <!-- JUMBOTRON ENDS HERE  -->
-        <!-- BUTTONS START HERE (THEY WILL BE WORKED ON HERE BEFORE MOVING TO WHERE THEY BELONG) -->
+
+
+
+        <!-- BUTTONS START HERE  -->
         <div class="container mt-5 mb-5">
           <div class="row">
             <div class="col-3 mt-n1">
