added top navbar to all pages

--- a/album.html
+++ b/album.html
@@ -73,6 +73,26 @@
 
       <!-- JUMBOTRON START HERE -->
       <div class="jumbotron jumbotron-fluid album-jumbotron-don pb-3">
+        <!-- navbar-top starts -->
+        <div class="container d-flex justify-content-between mt-n4 mb-5 px-5">
+          <div class="arrows-container">
+            <ion-icon name="chevron-back-outline"></ion-icon>
+            <ion-icon name="chevron-forward-outline"></ion-icon>
+          </div>
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class="artist-profile-pic"
+                src="./images/Sherlock_Holmes_profilepic.jpeg" alt="">
+              <span>sherlockholmes</span>
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Account</a>
+              <a class="dropdown-item" href="#">Profile</a>
+              <a class="dropdown-item" href="#">Log out</a>
+            </div>
+          </div>
+        </div>
+        <!-- navbar-top ends -->
         <div class="container d-flex">
           <img class="bohemian-album-cover ml-2" src="./images/bohemian-rhapsody-cover.png" alt="">
           <div class="container">
