--- a/artist.html
+++ b/artist.html
@@ -76,17 +76,38 @@
 
       <!-- JUMBOTRON STARTS HERE -->
 
-      <div class="position-relative">
-        <div class="verified-artist-container">
-          <i class="jumbo-icon bi bi-patch-check-fill"></i>
-          <span class="verified-artist-text">Verified Artist</span>
+      <div class="jumbotron-fluid">
+        <div class="position-relative">
+          <!-- navbar-top starts -->
+          <div class="navbar-top-container container d-flex justify-content-between mt-n4 mb-5 px-5">
+            <div class="arrows-container">
+              <ion-icon name="chevron-back-outline"></ion-icon>
+              <ion-icon name="chevron-forward-outline"></ion-icon>
+            </div>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class="artist-profile-pic"
+                  src="./images/Sherlock_Holmes_profilepic.jpeg" alt="">
+                <span>sherlockholmes</span>
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Account</a>
+                <a class="dropdown-item" href="#">Profile</a>
+                <a class="dropdown-item" href="#">Log out</a>
+              </div>
+            </div>
+          </div>
+          <!-- navbar-top ends -->
+          <div class="verified-artist-container">
+            <i class="jumbo-icon bi bi-patch-check-fill"></i>
+            <span class="verified-artist-text">Verified Artist</span>
+          </div>
+          <img class="w-100 jumbo-img img-fluid " src="./images/jumbotron1.jpg" alt="">
+          <h1 class="jumbo-title">Queen</h1>
+          <p class="jumbo-parag">37,120,733 listeners</p>
         </div>
-        <img class="w-100 jumbo-img img-fluid " src="./images/jumbotron1.jpg" alt="">
-        <h1 class="jumbo-title">Queen</h1>
-        <p class="jumbo-parag">37,120,733 listeners</p>
+        <!-- JUMBOTRON ENDS HERE  -->
       </div>
-
-      <!-- JUMBOTRON ENDS HERE  -->
 
 
 
