--- a/homepage.html
+++ b/homepage.html
@@ -68,8 +68,29 @@
     </div>
 
     <div class="col-10 px-0">
-
       <div class="container-fluid good-morning-container-fluid pt-5">
+
+        <!-- navbar-top starts -->
+        <div class="container d-flex justify-content-between mt-n4 mb-5">
+          <div class="arrows-container">
+            <ion-icon name="chevron-back-outline"></ion-icon>
+            <ion-icon name="chevron-forward-outline"></ion-icon>
+          </div>
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class="artist-profile-pic"
+                src="./images/Sherlock_Holmes_profilepic.jpeg" alt="">
+              <span>sherlockholmes</span>
+            </button>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+              <a class="dropdown-item" href="#">Account</a>
+              <a class="dropdown-item" href="#">Profile</a>
+              <a class="dropdown-item" href="#">Log out</a>
+            </div>
+          </div>
+        </div>
+        <!-- navbar-top ends -->
+
         <h1>Good morning</h1>
         <div class="good-morning-main-container">
           <div class="good-morning-card-container">
