worked on responsiveness

--- a/homepage.html
+++ b/homepage.html
@@ -139,7 +139,7 @@
           <h4 class=" py-3"><strong>Recently played</strong></h4>
           <a href="#" class="see-all py-3">SEE ALL</a>
           <div class="row mx-n1 mb-4">
-            <div class=" col-sm pb-2 col  px-1 w-100 img-fluid">
+            <div class=" col pb-2 col  px-1 w-100 img-fluid">
               <div class="card ">
                 <img class="images" src="images/img1.jpg" class="w-100 img-fluid rounded" alt="">
                 <i class="bi bi-play-circle"></i>
@@ -149,7 +149,7 @@
                 </div>
               </div>
             </div>
-            <div class=" col-sm pb-2 col   px-1 w-100 img-fluid">
+            <div class=" col pb-2 col   px-1 w-100 img-fluid">
               <div class="card h-100">
                 <img class="images" src="images/img2.jpg" class="w-100 img-fluid rounded" alt="">
                 <i class="bi bi-play-circle"></i>
@@ -160,7 +160,7 @@
                 </div>
               </div>
             </div>
-            <div class=" col-sm pb-2 col   px-1 w-100 img-fluid">
+            <div class=" col pb-2 col   px-1 w-100 img-fluid">
               <div class="card h-100">
                 <img class="images" src="images/img3.jpg" class="w-100 img-fluid rounded" alt="">
                 <div class="card-body">
@@ -170,7 +170,7 @@
                 </div>
               </div>
             </div>
-            <div class=" col-sm pb-2 col   px-1 w-100 img-fluid">
+            <div class=" col pb-2 col   px-1 w-100 img-fluid">
               <div class="card h-100">
                 <img class="images" src="images/liked songs.jpg" class="w-100 img-fluid rounded" alt="">
                 <div class="body">
@@ -178,7 +178,7 @@
                 </div>
               </div>
             </div>
-            <div class=" col-sm pb-2 col   px-1 w-100 img-fluid">
+            <div class=" col pb-2 col   px-1 w-100 img-fluid">
               <div class="card h-100">
                 <img id="round-img" class="images" src="images/img5.jpg" class="w-100 img-fluid rounded" alt="">
                 <div class="card-body">
@@ -188,7 +188,7 @@
                 </div>
               </div>
             </div>
-            <div class=" col-sm pb-2 col   px-1 w-100 img-fluid">
+            <div class=" col pb-2 col   px-1 w-100 img-fluid">
               <div class="card h-100">
                 <img class="images" src="images/img6.jpg" class="w-100 img-fluid rounded" alt="">
                 <div class="card-body">
@@ -198,7 +198,7 @@
                 </div>
               </div>
             </div>
-            <div class=" col-sm pb-2 col   px-1 w-100 img-fluid">
+            <div class=" col pb-2 col   px-1 w-100 img-fluid">
               <div class="card h-100">
                 <img class="images" src="images/img7.jpg" class="w-100 img-fluid rounded" alt="">
                 <div class="card-body">
@@ -208,7 +208,7 @@
                 </div>
               </div>
             </div>
-            <div class=" col-sm pb-2 col   px-1 w-100 img-fluid">
+            <div class=" col pb-2 col   px-1 w-100 img-fluid">
               <div class="card h-100">
                 <img class="images" src="images/img8.jpg" class="w-100 img-fluid rounded" alt="">
                 <div class="card-body">
@@ -228,7 +228,7 @@
           <a href="#" class="see-all2">SEE ALL</a>
 
           <div class="row mx-n1 mb-4">
-            <div class=" col-sm pb-2 col  px-1 w-100 img-fluid">
+            <div class=" col pb-2 col  px-1 w-100 img-fluid">
               <div class="card ">
                 <img class="images" src="images/img9.jpg" class="w-100 img-fluid rounded" alt="">
                 <div class="card-body">
@@ -238,7 +238,7 @@
                 </div>
               </div>
             </div>
-            <div class=" col-sm pb-2 col  px-1 w-100 img-fluid">
+            <div class=" col pb-2 col  px-1 w-100 img-fluid">
               <div class="card h-100">
                 <img class="images" src="images/img10.jpg" class="w-100 img-fluid rounded" alt="">
                 <div class="card-body">
@@ -248,7 +248,7 @@
                 </div>
               </div>
             </div>
-            <div class=" col-sm pb-2 col  px-1 w-100 img-fluid">
+            <div class=" col pb-2 col  px-1 w-100 img-fluid">
               <div class="card h-100">
                 <img class="images" src="images/img11.jpg" class="w-100 img-fluid rounded" alt="">
                 <div class="card-body">
@@ -258,7 +258,7 @@
                 </div>
               </div>
             </div>
-            <div class=" col-sm pb-2 col  px-1 w-100 img-fluid">
+            <div class=" col pb-2 col  px-1 w-100 img-fluid">
               <div class="card h-100">
                 <img class="images" src="images/img12.jpg" class="w-100 img-fluid rounded" alt="">
                 <div class="card-body">
@@ -267,7 +267,7 @@
                 </div>
               </div>
             </div>
-            <div class=" col-sm pb-2 col  px-1 w-100 img-fluid">
+            <div class=" col pb-2 col  px-1 w-100 img-fluid">
               <div class="card h-100">
                 <img class="images" src="images/img13.png" class="w-100 img-fluid rounded" alt="">
                 <div class="card-body">
@@ -276,7 +276,7 @@
                 </div>
               </div>
             </div>
-            <div class=" col-sm pb-2 col  px-1 w-100 img-fluid">
+            <div class=" col pb-2 col  px-1 w-100 img-fluid">
               <div class="card h-100">
                 <img class="images" src="images/IMG14.jpg" class="w-100 img-fluid rounded" alt="">
                 <div class="card-body">
@@ -285,7 +285,7 @@
                 </div>
               </div>
             </div>
-            <div class=" col-sm pb-2 col    px-1 w-100 img-fluid">
+            <div class=" col pb-2 col    px-1 w-100 img-fluid">
               <div class="card h-100">
                 <img class="images" src="images/img15.jpg" class="w-100 img-fluid rounded" alt="">
                 <div class="card-body">
@@ -294,7 +294,7 @@
                 </div>
               </div>
             </div>
-            <div class=" col-sm pb-2 col   px-1 w-100 img-fluid">
+            <div class=" col pb-2 col   px-1 w-100 img-fluid">
               <div class="card h-100">
                 <img class="images" src="images/img16.jpg" class="w-100 img-fluid rounded" alt="">
                 <div class="card-body">
