--- a/homepage.html
+++ b/homepage.html
@@ -10,21 +10,23 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
-  <title>Hello, world!</title>
+  <title>Homepage</title>
 </head>
 
 <body>
 
 
   <!-- start of marti's navbar -->
-  <div class="row">
-    <div class="col-2 px-0 navbar-column">
-      <div class="container navbar-main-container">
+  <div class="row ">
+    <div class="col-2 navbar-column ">
+      <div class="container navbar-main-container sticky-top">
         <div class="logo-container">
-          <img id="main-logo" class="img-fluid mt-4 mb-4" src="./mp_assets/Spotify_Logo_RGB_White.png" alt="">
+          <img id="main-logo-white" class="img-fluid mt-4 mb-4" src="./mp_assets/Spotify_Logo_RGB_White.png" alt="">
+          <img id="main-logo-black" class="img-fluid mt-4 mb-4 d-none" src="./mp_assets/Spotify_Logo_CMYK_Black.png"
+            alt="">
         </div>
-        <div class="main-links-container">
-          <a href="#">
+        <div class="main-links-container ">
+          <a class="navbar-active-link" href="#">
             <ion-icon class="icon-fill mr-3" name="home"></ion-icon> Home
           </a>
           <a href="#">
@@ -34,7 +36,7 @@
             <ion-icon class="icon-outline mr-3" name="library-outline"></ion-icon> Library
           </a>
         </div>
-        <div class="secondary-links-container">
+        <div class="secondary-links-container ">
           <a href="#">
             <ion-icon id="create-playlist" class="mr-3" name="add"></ion-icon> Create Playlist
           </a>
@@ -42,7 +44,7 @@
             <ion-icon id="liked-songs" class="mr-3" name="heart"></ion-icon> Liked songs
           </a>
         </div>
-        <div class="playlist-links-container">
+        <div class="playlist-links-container ">
           <a href="#">Funky Heavy Bluesy</a>
           <a href="#">Your Top Songs 2020</a>
           <a href="#">In Love With You</a>
@@ -68,7 +70,7 @@
     </div>
 
     <div class="col-10 px-0">
-      <div class="container-fluid good-morning-container-fluid pt-5">
+      <div class="container-fluid good-morning-container-fluid  pt-5">
 
         <!-- navbar-top starts -->
         <div class="container d-flex justify-content-between mt-n4 mb-5">
@@ -76,16 +78,22 @@
             <ion-icon name="chevron-back-outline"></ion-icon>
             <ion-icon name="chevron-forward-outline"></ion-icon>
           </div>
-          <div class="dropdown">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class="artist-profile-pic"
-                src="./images/Sherlock_Holmes_profilepic.jpeg" alt="">
-              <span>sherlockholmes</span>
+          <div class="dropdown-and-light-toggle-group d-flex">
+            <button class="mr-3" onclick="toggleLightMode()">
+              <ion-icon id="sun-icon" class="" name="sunny-outline"></ion-icon>
+              <ion-icon id="moon-icon" class="d-none" name="moon-outline"></ion-icon>
             </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Account</a>
-              <a class="dropdown-item" href="#">Profile</a>
-              <a class="dropdown-item" href="#">Log out</a>
+            <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class="artist-profile-pic"
+                  src="./images/Sherlock_Holmes_profilepic.jpeg" alt="">
+                <span>sherlockholmes</span>
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" href="#">Account</a>
+                <a class="dropdown-item" href="#">Profile</a>
+                <a class="dropdown-item" href="#">Log out</a>
+              </div>
             </div>
           </div>
         </div>
@@ -134,13 +142,15 @@
             <div>Opeth</div>
           </div>
         </div>
+      </div>
 
+      <div class="centre-section-container ">
         <div class="container-fluid">
           <h4 class=" py-3"><strong>Recently played</strong></h4>
           <a href="#" class="see-all py-3">SEE ALL</a>
           <div class="row mx-n1 mb-4">
             <div class=" col pb-2 col  px-1 w-100 img-fluid">
-              <div class="card ">
+              <div class="card h-100">
                 <img class="images" src="images/img1.jpg" class="w-100 img-fluid rounded" alt="">
                 <i class="bi bi-play-circle"></i>
                 <div class="card-body">
@@ -220,16 +230,13 @@
             </div>
           </div>
         </div>
-
-
         <div class="container-fluid">
           <h4 class=""><strong>Shows <span>to try </span></strong></h4>
           <p>Podcasts we think you'll get hooked on</p>
           <a href="#" class="see-all2">SEE ALL</a>
-
           <div class="row mx-n1 mb-4">
             <div class=" col pb-2 col  px-1 w-100 img-fluid">
-              <div class="card ">
+              <div class="card h-100">
                 <img class="images" src="images/img9.jpg" class="w-100 img-fluid rounded" alt="">
                 <div class="card-body">
                   <h5 class="pb-2">II Podcast di Aless..</h5>
@@ -305,8 +312,9 @@
             </div>
           </div>
         </div>
-
       </div>
+
+
 
     </div>
   </div>
@@ -314,8 +322,8 @@
 
   <!-- FOOTER STARTS HERE  -->
   <section>
-    <footer>
-      <div class="main-container1 d-flex ">
+    <footer class="">
+      <div class="main-container1 d-flex">
         <div class=" col-4 mt-3 ">
           <div class="row ">
             <div class="col-2">
@@ -494,7 +502,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
     -->
-
+  <script src="app.js"></script>
 
 </body>
 
