--- a/homepage.html
+++ b/homepage.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="styles.css" />
-    <title>Hello, world!</title>
+    <title>Spotify Home page</title>
   </head>
 
   <body>
@@ -119,7 +119,7 @@
           </div>
           <!-- navbar-top ends -->
 
-          <h1>Good morning</h1>
+          <h1 id="Greetings-part"></h1>
           <div class="good-morning-main-container">
             <div class="good-morning-card-container">
               <img src="./images/img1.jpg" alt="" />
@@ -490,75 +490,7 @@
                 </div>
               </div>
 
-              <!-- <div class=" col-sm pb-2 col   px-1 w-100 img-fluid">
-              <div class="card h-100">
-                <img class="images" src="images/img2.jpg" class="w-100 img-fluid rounded" alt="">
-                <i class="bi bi-play-circle"></i>
-                <div class="card-body">
-                  <h5>Metal Ballads</h5>
-                  <p class="card-text text-secondary pt-4">A collection of the best <br> metal ballads.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class=" col-sm pb-2 col   px-1 w-100 img-fluid">
-              <div class="card h-100">
-                <img class="images" src="images/img3.jpg" class="w-100 img-fluid rounded" alt="">
-                <div class="card-body">
-                  <h5 class="pt-1">Midian</h5>
-                  <p class="card-text text-secondary pt-4">Cradle Of Filth
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class=" col-sm pb-2 col   px-1 w-100 img-fluid">
-              <div class="card h-100">
-                <img class="images" src="images/liked songs.jpg" class="w-100 img-fluid rounded" alt="">
-                <div class="body">
-                  <h5 class="pt-4 pl-2"> Liked Songs</h5>
-                </div>
-              </div>
-            </div>
-            <div class=" col-sm pb-2 col   px-1 w-100 img-fluid">
-              <div class="card h-100">
-                <img id="round-img" class="images" src="images/img5.jpg" class="w-100 img-fluid rounded" alt="">
-                <div class="card-body">
-                  <h5 class="pt-1">LE BASK</h5>
-                  <p class="card-text text-secondary pt-4">Artist
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class=" col-sm pb-2 col   px-1 w-100 img-fluid">
-              <div class="card h-100">
-                <img class="images" src="images/img6.jpg" class="w-100 img-fluid rounded" alt="">
-                <div class="card-body">
-                  <h5>POST HUMAN: S...</h5>
-                  <p class="card-text text-secondary">Bring Me The Horizon
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class=" col-sm pb-2 col   px-1 w-100 img-fluid">
-              <div class="card h-100">
-                <img class="images" src="images/img7.jpg" class="w-100 img-fluid rounded" alt="">
-                <div class="card-body">
-                  <h5>This is Joe Bonam</h5>
-                  <p class="card-text text-secondary">This is Joe Bonamassa..<br>
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class=" col-sm pb-2 col   px-1 w-100 img-fluid">
-              <div class="card h-100">
-                <img class="images" src="images/img8.jpg" class="w-100 img-fluid rounded" alt="">
-                <div class="card-body">
-                  <h5>Nymphetamine</h5>
-                  <p class="card-text text-secondary pt-4">Cradle Of Filth
-                  </p>
-                </div>
-              </div>
-            </div> -->
+              
             </div>
           </div>
 
@@ -888,85 +820,7 @@
                   </div>
                 </div>
               </div>
-              <!-- <div class=" col-sm pb-2 col  px-1 w-100 img-fluid">
-              <div class="card ">
-                <img class="images" src="images/img9.jpg" class="w-100 img-fluid rounded" alt="">
-                <div class="card-body">
-                  <h5 class="pb-2">II Podcast di Aless..</h5>
-                  <p class="card-text text-secondary">Alessandro Barbero
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class=" col-sm pb-2 col  px-1 w-100 img-fluid">
-              <div class="card h-100">
-                <img class="images" src="images/img10.jpg" class="w-100 img-fluid rounded" alt="">
-                <div class="card-body">
-                  <h5>Demoni Urbani</h5>
-                  <p class="card-text text-secondary pt-1">Gli Ascoltabili
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class=" col-sm pb-2 col  px-1 w-100 img-fluid">
-              <div class="card h-100">
-                <img class="images" src="images/img11.jpg" class="w-100 img-fluid rounded" alt="">
-                <div class="card-body">
-                  <h5>Daily Cogito</h5>
-                  <p class="card-text text-secondary pt-4">Rick DuFer
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class=" col-sm pb-2 col  px-1 w-100 img-fluid">
-              <div class="card h-100">
-                <img class="images" src="images/img12.jpg" class="w-100 img-fluid rounded" alt="">
-                <div class="card-body">
-                  <h5>Locanda del Drag..</h5>
-                  <p class="card-text text-secondary pt-1"> Andrea Lucca</p>
-                </div>
-              </div>
-            </div>
-            <div class=" col-sm pb-2 col  px-1 w-100 img-fluid">
-              <div class="card h-100">
-                <img class="images" src="images/img13.png" class="w-100 img-fluid rounded" alt="">
-                <div class="card-body">
-                  <h5>Mindfulness in Voce</h5>
-                  <p class="card-text text-secondary pt-1">Mindfulness Bergamo</p>
-                </div>
-              </div>
-            </div>
-            <div class=" col-sm pb-2 col  px-1 w-100 img-fluid">
-              <div class="card h-100">
-                <img class="images" src="images/IMG14.jpg" class="w-100 img-fluid rounded" alt="">
-                <div class="card-body">
-                  <h5>Que Due Sul Server</h5>
-                  <p class="card-text text-secondary pt-1">Que Due Sul Server</p>
-                </div>
-              </div>
-            </div>
-            <div class=" col-sm pb-2 col    px-1 w-100 img-fluid">
-              <div class="card h-100">
-                <img class="images" src="images/img15.jpg" class="w-100 img-fluid rounded" alt="">
-                <div class="card-body">
-                  <h5>Power Pizza</h5>
-                  <p class="card-text text-secondary pt-4">Nick Loro Sio </p>
-                </div>
-              </div>
-            </div>
-            <div class=" col-sm pb-2 col   px-1 w-100 img-fluid">
-              <div class="card h-100">
-                <img class="images" src="images/img16.jpg" class="w-100 img-fluid rounded" alt="">
-                <div class="card-body">
-                  <h5>Mitologia</h5>
-                  <p class="card-text text-secondary pt-4">Spotify Studios</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div> -->
+            
             </div>
           </div>
         </div>
@@ -1214,4 +1068,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
     -->
   </body>
+  <script>
+    let date = new Date();
+    let hrs = date.getHours();
+
+    let greetings;
+
+    if (hrs < 12)
+        greetings = 'Good Morning';
+    else if (hrs >= 12 && hrs <= 17)
+        greetings = 'Good Afternoon';
+    else if (hrs >= 17 && hrs <= 24)
+        greetings = 'Good Evening';
+
+    document.getElementById('Greetings-part').innerHTML = greetings;
+
+
+
+</script> 
 </html>
