--- a/artist.html
+++ b/artist.html
@@ -20,10 +20,12 @@
 
   <!-- start of marti's navbar -->
   <div class="row">
-    <div class="col-2 px-0 navbar-col">
-      <div class="container navbar-main-container">
+    <div class="col-2 px-0 navbar-column">
+      <div class="container navbar-main-container sticky-top">
         <div class="logo-container">
-          <img id="main-logo" class="img-fluid mt-4 mb-4" src="./mp_assets/Spotify_Logo_RGB_White.png" alt="">
+          <img id="main-logo-white" class="img-fluid mt-4 mb-4" src="./mp_assets/Spotify_Logo_RGB_White.png" alt="">
+          <img id="main-logo-black" class="img-fluid mt-4 mb-4 d-none" src="./mp_assets/Spotify_Logo_CMYK_Black.png"
+            alt="">
         </div>
         <div class="main-links-container">
           <a class="navbar-active-link" href="#">
@@ -84,16 +86,22 @@
               <ion-icon name="chevron-back-outline"></ion-icon>
               <ion-icon name="chevron-forward-outline"></ion-icon>
             </div>
-            <div class="dropdown">
-              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class="artist-profile-pic"
-                  src="./images/Sherlock_Holmes_profilepic.jpeg" alt="">
-                <span>sherlockholmes</span>
+            <div class="dropdown-and-light-toggle-group d-flex">
+              <button class="mr-3" onclick="toggleLightModeArtist()">
+                <ion-icon id="sun-icon" class="" name="sunny-outline"></ion-icon>
+                <ion-icon id="moon-icon" class="d-none" name="moon-outline"></ion-icon>
               </button>
-              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">Account</a>
-                <a class="dropdown-item" href="#">Profile</a>
-                <a class="dropdown-item" href="#">Log out</a>
+              <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><img class="artist-profile-pic"
+                    src="./images/Sherlock_Holmes_profilepic.jpeg" alt="">
+                  <span>sherlockholmes</span>
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                  <a class="dropdown-item" href="#">Account</a>
+                  <a class="dropdown-item" href="#">Profile</a>
+                  <a class="dropdown-item" href="#">Log out</a>
+                </div>
               </div>
             </div>
           </div>
@@ -139,7 +147,8 @@
               <div class="secondary-button-group d-flex">
                 <button class="follow-btn mr-5">FOLLOW</button>
                 <div class="three-dots">
-                  <img src="./mp_assets/three-dots.svg" alt="">
+                  <img id="three-dots-white" class="" src="./mp_assets/three-dots.svg" alt="">
+                  <img id="three-dots-black" class="d-none" src="./mp_assets/three-dots-black.svg" alt="">
                 </div>
               </div>
             </div>
@@ -420,7 +429,7 @@
           <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
           -->
 
-
+  <script src="app.js"></script>
 </body>
 
 </html>
