new feature aDdeEd

--- a/Spotify search page/index.html
+++ b/Spotify search page/index.html
@@ -15,7 +15,7 @@
       integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/searchStyle.css" />
 
     <title>Search!</title>
   </head>
@@ -65,6 +65,7 @@
             aria-label="Search"
           />
         </form>
+
         <div class="btn-group">
           <button
             class="btn btn-dark btn-sm dropdown-toggle rounded-pill border-0"
@@ -125,6 +126,15 @@
               Bohemian Rhapsody(Th...
             </p>
             <p class="text-secondary pt-0">Queen</p>
+            <!-- Button trigger modal -->
+            <button
+              type="button"
+              class="btn btn-dark"
+              data-toggle="modal"
+              data-target="#staticBackdrop"
+            >
+              Read Bio..
+            </button>
           </div>
         </div>
       </div>
@@ -252,6 +262,104 @@
           </div>
         </div>
       </div>
+    </div>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="staticBackdrop"
+      data-backdrop="static"
+      data-keyboard="false"
+      tabindex="-1"
+      aria-labelledby="staticBackdropLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+        <div class="modal-content bg-dark text-light">
+          <div class="modal-header">
+            <h5
+              class="modal-title font-italic font-weight-bold"
+              id="staticBackdropLabel"
+            >
+              Bohemian Rhapsody
+            </h5>
+            <button
+              type="button"
+              class="close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body bg-dark text-light">
+            "Bohemian Rhapsody" is a song by the British rock band
+            <a href="https://en.wikipedia.org/wiki/Queen_(band)">Queen</a>. It
+            was written by
+            <a href="https://en.wikipedia.org/wiki/Freddie_Mercury"
+              >Freddie Mercury</a
+            >
+            for the band's 1975 album
+            <a
+              href="https://en.wikipedia.org/wiki/A_Night_at_the_Opera_(Queen_album)"
+              >A Night at the Opera.</a
+            >
+            The song is a six-minute suite, notable for its lack of a refraining
+            chorus and consisting of several sections: an intro, a ballad
+            segment, an operatic passage, a hard rock part and a reflective
+            coda. "Bohemian Rhapsody" is one of the few songs to emerge from the
+            1970s progressive rock movement to achieve widespread commercial
+            success and appeal to a mainstream audience. "Bohemian Rhapsody"
+            topped the UK Singles Chart for nine weeks and had sold more than a
+            million copies by the end of January 1976. In 1991, after Mercury's
+            death, it topped the charts for another five weeks, eventually
+            becoming the
+            <a
+              href="https://en.wikipedia.org/wiki/List_of_best-selling_singles_in_the_United_Kingdom"
+              >UK's third best-selling single of all time.[6]</a
+            >
+            It is also the only song to reach the UK Christmas number one twice
+            by the same artist. It also topped the charts in countries including
+            Canada, Australia, New Zealand, Ireland, and the Netherlands, and
+            sold over six million copies worldwide. In the United States, the
+            song peaked at number nine in 1976, but reached a new peak of number
+            two on the Billboard Hot 100 after being used in the film Wayne's
+            World (1992). In 2018, the release of Queen biopic Bohemian Rhapsody
+            brought the song renewed popularity and chart success worldwide. In
+            March 2021 it was
+            <a
+              href="https://en.wikipedia.org/wiki/List_of_best-selling_singles_in_the_United_States#Diamond_certification"
+              >certified Diamond</a
+            >
+            in the US for combined digital sales and streams equal to 10 million
+            units. Although critical reaction was initially mixed, "Bohemian
+            Rhapsody" has since become Queen's most popular song and is
+            considered one of the greatest rock songs of all time. The single
+            was accompanied by a groundbreaking promotional video. Rolling Stone
+            stated that its influence "cannot be overstated, practically
+            inventing the music video seven years before MTV went on the air."
+            The Guardian named its music video one of the 50 key events in rock
+            music history, helping make videos a critical tool in music
+            marketing. In 2004, "Bohemian Rhapsody" was inducted into the Grammy
+            Hall of Fame. It has appeared in numerous polls of the greatest
+            songs in popular music, including a ranking at number 17 on Rolling
+            Stone's list of "the 500 Greatest Songs of All Time. Mercury's vocal
+            performance was chosen as the greatest in rock history by readers of
+            Rolling Stone. In December 2018, it became the most streamed song
+            from the 20th century, and it had been downloaded or streamed over
+            1.6 billion times.
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn" data-dismiss="modal">
+              Close
+            </button>
+            <button type="button" class="btn">Add to Reading List</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="scroll-container">
+      <div class=" text-light" id="scroll-text">THIS IS AN AMAZING EXPERIENCE  THIS IS AN AMAZING EXPERIENCE THIS IS AN AMAZING EXPERIENCE THIS IS AN AMAZING EXPERIENCE<div>
     </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
