--- a/homepage.html
+++ b/homepage.html
@@ -1033,6 +1033,7 @@
         </div>
       </footer>
     </section>
+    <script src="greeting.js"></script>
     <!-- FOOTER ENDS HERE -->
 
     <!-- ionicons -->
@@ -1068,22 +1069,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
     -->
   </body>
-  <script>
-    let date = new Date();
-    let hrs = date.getHours();
-
-    let greetings;
-
-    if (hrs < 12)
-        greetings = 'Good Morning';
-    else if (hrs >= 12 && hrs <= 17)
-        greetings = 'Good Afternoon';
-    else if (hrs >= 17 && hrs <= 24)
-        greetings = 'Good Evening';
-
-    document.getElementById('Greetings-part').innerHTML = greetings;
-
-
-
-</script> 
+  
 </html>
