final tweaks on light-mode

--- a/homepage.html
+++ b/homepage.html
@@ -73,7 +73,7 @@
       <div class="container-fluid good-morning-container-fluid pt-5">
 
         <!-- navbar-top starts -->
-        <div class="container d-flex justify-content-between mt-n4 mb-5">
+        <div class="container-fluid d-flex justify-content-between mt-n4 mb-5">
           <div class="arrows-container">
             <ion-icon name="chevron-back-outline"></ion-icon>
             <ion-icon name="chevron-forward-outline"></ion-icon>
