--- a/album.html
+++ b/album.html
@@ -76,7 +76,7 @@
       <!-- JUMBOTRON START HERE -->
       <div class="jumbotron jumbotron-fluid album-jumbotron-don pb-3">
         <!-- navbar-top starts -->
-        <div class="container d-flex justify-content-between mt-n4 mb-5 px-5">
+        <div class="container-fluid d-flex justify-content-between mt-n4 mb-5 px-5">
           <div class="arrows-container">
             <ion-icon name="chevron-back-outline"></ion-icon>
             <ion-icon name="chevron-forward-outline"></ion-icon>
@@ -127,7 +127,7 @@
       <div class="row ml-1 mb-4">
         <div class="col-2 mt-n1">
           <div class="play-button-group d-flex">
-            <div class="play-btn d-flex justify-content-center mr-5">
+            <div class="play-btn d-flex justify-content-center mr-5" onclick="playPauseToggle()">
               <img class="play-triangle" src="./mp_assets/spotify play triangle.svg" alt="">
               <img class="pause-bars d-none" src="./mp_assets/spotify pause bars bigger.svg" alt="">
             </div>
