--- a/player.html
+++ b/player.html
@@ -20,12 +20,12 @@
             <span class="song-duration">13:53</span>
         </div>
         <div class="controls">
-            <button class="btn backward-btn"><img src="./image/pre.png" alt=""></button>
+            <button class="btn backward-btn"><img src="/images/image/pre.png". alt=""></button>
             <button class="play-btn pause">
                 <span></span>
                 <span></span>
             </button>
-            <button class="btn forward-btn"><img src="./image/nxt.png" alt=""></button>
+            <button class="btn forward-btn"><img src="/images/image/nxt.png" alt=""></button>
 
         </div>
 
